--- a/src/app/shared/accesspoint-details/accesspoint-details.component.html
+++ b/src/app/shared/accesspoint-details/accesspoint-details.component.html
@@ -55,9 +55,11 @@
                     <h5><span class="property-name">Device type:</span> {{ currentSelectedAcccessPointSnapshoot.deviceType }}</h5>
                     <h5><span class="property-name">Signal area:</span> {{ currentSelectedAcccessPointSnapshoot.signalArea }}m<sup>2</sup></h5>
                     <h5><span class="property-name">Frequency:</span> {{ currentSelectedAcccessPointSnapshoot.frequency }}</h5>
+                    <h5><span class="property-name">Presence:</span> {{ currentSelectedAcccessPointSnapshoot.isPresent ? "Present" : "Missing" }}</h5>
                     <h5><span class="property-name">Security:</span><span [style.color]="getSecurityColor(currentSelectedAcccessPointSnapshoot)"> {{ getSecurityText(currentSelectedAcccessPointSnapshoot) }}</span></h5>
                     <h5><span class="property-name">Available security standards:</span> {{ formatSerialziedArrayData(currentSelectedAcccessPointSnapshoot.securityStandards) }}</h5>
                     <h5><span class="property-name">Available security protocols:</span> {{ formatSerialziedArrayData(currentSelectedAcccessPointSnapshoot.securityProtocols) }}</h5>
+                    <h5><span class="property-name">Run id:</span> {{ currentSelectedAcccessPointSnapshoot.runIdentifier ?? "Undefined" }}</h5>
 
                     <div *ngIf="__selectedAccessPointStamp === undefined; else dataForStamp">
                         <h5><span class="property-name">First seen:</span> {{ __selectedAccessPoint.creationTimestamp }}</h5>
